kubernetes/scraper-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: yt-chanalyzer-ns
  name: scraper-service-chanalyzer
spec:
  ports:
    - port: 5000
      targetPort: 5000
      name: scraper-service-chanalyzer
  selector:
    app: scraper-service-chanalyzer
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: yt-chanalyzer-ns
  name: scraper-service-chanalyzer
spec:
  selector:
    matchLabels:
      app: scraper-service-chanalyzer
  replicas: 1
  template:
    metadata:
      labels:
        app: scraper-service-chanalyzer
    spec:
      containers:
        - image: conorsheppard/scraper-service-chanalyzer
          name: scraper-service-chanalyzer
          ports:
            - containerPort: 5000
