kubernetes/frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: yt-chanalyzer-ns
---
apiVersion: v1
kind: Service
metadata:
  namespace: yt-chanalyzer-ns
  name: react-chanalyzer
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: react-chanalyzer
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: yt-chanalyzer-ns
  name: react-chanalyzer
spec:
  selector:
    matchLabels:
      app: react-chanalyzer
  replicas: 1
  template:
    metadata:
      labels:
        app: react-chanalyzer
    spec:
      containers:
        - image: conorsheppard/react-chanalyzer
          name: react-chanalyzer
          ports:
            - containerPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: yt-chanalyzer-ns
  name: ingress-yt-chanalyzer
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-chanalyzer
                port:
                  number: 80
